webpage now displays map svg image of the world

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Grub Globe</title>
 </head>
 <body>
-    
+    <img src="./assets/images/world.svg" alt="world map" width="100%">
 </body>
 <script src="./assets/js/index.js"></script>
 </html>
