--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/stlye.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Grub Globe</title>
 </head>
 <body>
-    <img src="./assets/images/world.svg" alt="world map" width="100%">
+    <object type="image/svg+xml" data="./assets/images/world.svg"></object>
 </body>
 <script src="./assets/js/index.js"></script>
 </html>
