--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Grub Globe</title>
 </head>
 <body>
-    <object type="image/svg+xml" data="./assets/images/world.svg"></object>
+    <object type="image/svg+xml" data="./assets/images/world.svg" id="world-map-object"></object>
 </body>
 <script src="./assets/js/index.js"></script>
 </html>
