the country name is now displayed in a toggled popup window that will house the recipe

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <object type="image/svg+xml" data="./assets/images/world.svg" id="world-map-object"></object>
+    <div id="popup" class="hidden">
+        <h2 id="country-name"></h2>
+    </div>
 </body>
 <script src="./assets/js/index.js"></script>
 </html>
