now when a user clicks afghanistan a random recipe is presented from the data

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,13 @@
     <object type="image/svg+xml" data="./assets/images/world.svg" id="world-map-object"></object>
     <div id="popup" class="hidden">
         <h2 id="country-name"></h2>
+        <h3 id="recipe-name"></h3>
+        <p id="description"></p>
+        <h4>Ingredients</h4>
+        <ul id="ingredient-list"></ul>
+        <h4>Instructions</h4>
+        <ul id="instruction-list"></ul>
+
     </div>
 </body>
 <script src="./assets/js/index.js"></script>
