--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Grub Globe</title>
-</head>
-<body>
-    <object type="image/svg+xml" data="./assets/images/world.svg" id="world-map-object"></object>
+  </head>
+  <body>
+    <object
+      type="image/svg+xml"
+      data="./assets/images/world.svg"
+      id="world-map-object"
+    ></object>
     <div id="popup" class="hidden">
-        <h2 id="country-name"></h2>
-        <h3 id="recipe-name"></h3>
-        <p id="description"></p>
-        <h4>Ingredients</h4>
-        <ul id="ingredient-list"></ul>
-        <h4>Instructions</h4>
-        <ul id="instruction-list"></ul>
-
+      <h2 id="country-name"></h2>
+      <h3 id="recipe-name"></h3>
+      <p id="description"></p>
+      <h4>Ingredients</h4>
+      <ul id="ingredient-list"></ul>
+      <h4>Instructions</h4>
+      <ul id="instruction-list"></ul>
     </div>
-</body>
-<script src="./assets/js/index.js"></script>
+  </body>
+  <script src="./assets/js/index.js"></script>
 </html>
