idk just a little stlying

--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,10 @@
       <h2 id="country-name"></h2>
       <h3 id="recipe-name"></h3>
       <p id="description"></p>
-      <h4>Ingredients</h4>
+      <h4 class="title">Ingredients</h4>
       <ul id="ingredient-list"></ul>
-      <h4>Instructions</h4>
-      <ul id="instruction-list"></ul>
+      <h4 class="title">Instructions</h4>
+      <ol id="instruction-list"></ol>
     </div>
   </body>
   <script src="./assets/js/index.js"></script>
